# Smart-Water-Leakage-Detection

./: LICENSE  README.md
docs/: architecture.md
firmware/: CMakeLists.txt  main.c
